[package]
name = "bcdl"
version = "0.1.0"
edition = "2018"
authors = ["Grant Handy <grantshandy@gmail.com>"]
description = "A command line bandcamp downloader"
homepage = "https://github.com/grantshandy/bcdl"
repository = "https://github.com/grantshandy/bcdl"
keywords = ["bandcamp", "music", "downloader", "free", "cli"]
categories = ["Command line utilities"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["stream"] }
scraper = "0.12.0"
serde_json = "1.0.68"
tokio = { version = "1", features = ["full"] }
fstream = "0.1.2"
futures-util = "0.3.17"
colored = "2.0.0"
clap = "2.33.3"
linya = "0.2.1"
bytes = "1.1.0"
id3 = "0.6.5"
chrono = "0.4.19"
anyhow = "1.0.44"
size-display = "0.1.4"
